Thu Oct  7 00:08:37 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_s_sysopen): preserve path in the buffer allocated by
	  ALLOCA_N() to prevent modification.  [ruby-dev:24438]

Wed Oct  6 09:21:00 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_mode_flags): preserve append mode flag.
	  [ruby-dev:24436]

	* io.c (rb_io_modenum_mode): do not use external output buffer.

	* string.c (rb_str_justify): differ pointer retrieval to prevent
	  padding string modification.  [ruby-dev:24434]

	* range.c (range_each_func): allow func to terminate loop by
	  returning RANGE_EACH_BREAK.

	* range.c (member_i): use RANGE_EACH_BREAK. [ruby-talk:114959]

Tue Oct  5 09:53:22 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_fopen): mode string copy at the lowest level.

	* io.c (rb_io_flags_mode): requires output buffer no more.  no
	  allocation needed.

	* array.c (rb_ary_index): takes a block to compare items in an
	  array.  [ruby-talk:113069] [Ruby2]

	* array.c (rb_ary_rindex): ditto.

Mon Oct  4 14:03:40 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_file_open_internal, rb_io_reopen): fname might be altered
	  while GC.  [ruby-dev:24408]

Mon Oct  4 12:53:45 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/optiondb.rb: support definition of command
	  resources on widgets

	* ext/tk/lib/tk/image.rb: bug fix

Sun Oct  3 21:16:05 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (TEXT_REGEXP): allow 8-bit characters for the german
	version of Microsoft Exchange Server.

	* lib/net/imap.rb (RTEXT_REGEXP): ditto.

	* lib/net/imap.rb (CTEXT_REGEXP): ditto.

Sat Oct  2 20:34:05 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (local_vars): moved to struct parser_params.
	  [ruby-dev:24391]

	* parser.y (stmts): remove suspicious NODE_BEGIN.  [ruby-dev:24390]

	* node.h (NEW_DVAR): extra semicolon.

Sat Oct  2 00:42:20 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
